--- a/docs/bookml/CSS/style.gitbook,plain.css
+++ b/docs/bookml/CSS/style.gitbook,plain.css
@@ -17,75 +17,84 @@
   along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 */
-
 /* Responsive margins are based on the simple rule 1.5% ~ 1em */
-
 /* Reduce margins on lists and ensure consistent positioning of the tags */
 /* TODO: this only works for ltr text, implement rtl alternative */
 .ltx_itemize, .ltx_enumerate {
   margin-left: 0;
-  padding-left: max(min(3.75%,2.5em),1.5em) !important; /* typical UA default is 40px = 2.5em */
-}
+  padding-left: max(min(3.75%, 2.5em), 1.5em) !important;
+  /* typical UA default is 40px = 2.5em */ }
 
 li.ltx_item .ltx_tag {
   box-sizing: border-box;
-  min-width: max(min(3.75%,2.5em),1.5em); /* same as padding-left */
-  margin-left: min(max(-3.75%,-2.5em),-1.5em);
-}
+  min-width: max(min(3.75%, 2.5em), 1.5em);
+  /* same as padding-left */
+  margin-left: min(max(-3.75%, -2.5em), -1.5em); }
 
-ul.ltx_itemize>li.ltx_item>.ltx_tag {
-  padding-right: max(min(1.05%,0.7em),0.4em); /* this seems the closest to default UA <ul>'s */
-}
+ul.ltx_itemize > li.ltx_item > .ltx_tag {
+  padding-right: max(min(1.05%, 0.7em), 0.4em);
+  /* this seems the closest to default UA <ul>'s */ }
 
-ol.ltx_enumerate>li.ltx_item>.ltx_tag {
-  padding-right: max(min(0.5%,0.3em),0.2em); /* this seems the closest to default UA <ol>'s */
-}
+ol.ltx_enumerate > li.ltx_item > .ltx_tag {
+  padding-right: max(min(0.5%, 0.3em), 0.2em);
+  /* this seems the closest to default UA <ol>'s */ }
 
 /* Reduce margins on listings and ensure content fits the container */
 .ltx_listing {
   margin-right: 0;
   max-width: 100%;
-  width: 100%;
-}
+  width: 100%; }
 
 /* Enlarge blockquote's */
 .ltx_quote {
   width: 100%;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 /* Ensure that oversized figures are scrollable */
 .ltx_figure {
-  overflow-x: auto;
-}
+  overflow-x: auto; }
 
 /* Reduce margins smoothly on small screens */
 .ltx_abstract {
-  margin-left: min(6%,4em);
-  margin-right: min(6%,4em);
-}
+  margin-left: min(6%, 4em);
+  margin-right: min(6%, 4em); }
 
 dl.ltx_description dd {
-  margin-left: min(7.5%,5em);
-}
+  margin-left: min(7.5%, 5em); }
 
 .ltx_toclist {
-  padding-inline-start: min(3.75%,2.5em);
-  padding-left: min(3.75%,2.5em) !important;
-}
+  padding-inline-start: min(3.75%, 2.5em);
+  padding-left: min(3.75%, 2.5em) !important; }
 
 /* Force no indentation */
 .ltx_p {
-  text-indent: 0em !important;
-}
+  text-indent: 0em !important; }
 
 /* Remove margins from first/last paragraphs in other containers */
 /* The list of containers is likely not exhaustive */
 td > .ltx_p:first-child,
 th > .ltx_p:first-child {
-  margin-top: 0 !important;
-}
+  margin-top: 0 !important; }
+
 td > .ltx_p:last-child,
 th > .ltx_p:last-child {
-  margin-bottom: 0 !important;
-}
+  margin-bottom: 0 !important; }
+
+/* Use flex for non-aligned equations */
+.ltx_equation.ltx_eqn_div {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  /* leqno */
+  /* reqno */ }
+  .ltx_equation.ltx_eqn_div > span:not(.ltx_tag) {
+    flex: 1;
+    text-align: center;
+    display: block;
+    width: 100%; }
+  .ltx_equation.ltx_eqn_div > span:first-child.ltx_tag {
+    width: 100%;
+    margin-right: -100%; }
+  .ltx_equation.ltx_eqn_div > span:last-child.ltx_tag {
+    width: 100%;
+    margin-left: -100%; }
