--- a/CSS/style.gitbook.scss
+++ b/CSS/style.gitbook.scss
@@ -259,3 +259,10 @@ h1.title {
 mjx-container[jax="CHTML"][display="true"] {
   margin: 0 !important;
 }
+
+/* lxFooter */
+.bml_footer {
+  border-top: solid 1px;
+  margin-top: 0.85em;
+  padding-top: 0.85em;
+}
