--- a/docs/bookml/CSS/style.gitbook,plain.css
+++ b/docs/bookml/CSS/style.gitbook,plain.css
@@ -98,3 +98,7 @@ th > .ltx_p:last-child {
   .ltx_equation.ltx_eqn_div > span:last-child.ltx_tag {
     width: 100%;
     margin-left: -100%; }
+
+/* Improve alignment of numbers in all tags (enumerate, equation numbers, ...) */
+.ltx_tag {
+  font-variant-numeric: tabular-nums; }
