--- a/docs/bookml/CSS/style.gitbook,plain.css
+++ b/docs/bookml/CSS/style.gitbook,plain.css
@@ -52,7 +52,8 @@ ol.ltx_enumerate > li.ltx_item > .ltx_tag {
 
 /* Ensure that oversized figures are scrollable */
 .ltx_figure {
-  overflow-x: auto; }
+  overflow-x: auto;
+  overflow-y: hidden; }
 
 /* Reduce margins smoothly on small screens */
 .ltx_abstract {
